--- a/_extensions/inline-svg/_extension.yml
+++ b/_extensions/inline-svg/_extension.yml
@@ -2,6 +2,7 @@ title: Inline-SVG
 author: Adam Blake
 version: 0.1.0
 quarto-required: ">=1.2.0"
+license: GPL-3.0-or-later
 contributes:
   filters:
     - inline-svg.lua
